changed a bunch of stuff and copied code and data from main wildhellgarden repo

--- a/notes/model/modelNotes.tex
+++ b/notes/model/modelNotes.tex
@@ -39,10 +39,10 @@ We discussed which of the following would be the most relevant variable that rel
 What kind of pooling? Partial pooling since they are all within the same family?
 
 
-Where: 
-\begin{itemize}
-	\item 
-	\item alpha
-\end{itemize} 
+%Where: 
+%\begin{itemize}
+%	\item 
+%	\item alpha
+%\end{itemize} 
 
 \end{document}
