scarping notes and model notes

--- a/notes/model/modelNotes.tex
+++ b/notes/model/modelNotes.tex
@@ -44,7 +44,8 @@ We discussed which of the following would be the most relevant variable that rel
 What kind of pooling? Partial pooling since they are all within the same family?\\
 
 \section{Simulate data}
-I arbitrarily decided to sum up th GDD between 100 and 250 days for now in order to simplify data simulation. 
+I arbitrarily decided to sum up th GDD between 100 and 250 days for now in order to simplify data simulation. \\
+yhat: combine the effects that I generated from the grand mean, the year, species and individual effect deviation effect from the mean, + error returns my yhat. That returns the observed outcome which is composed of multiple nested effects. 
 
 \subsection*{Common Bayesian Notation} % found online
 
