--- a/notes/timeline/2025ganttChart_Chapt2.tex
+++ b/notes/timeline/2025ganttChart_Chapt2.tex
@@ -62,7 +62,7 @@
     \ganttbar[bar/.append style={fill=yellow}]{Treespotters: Second model draft to Lizzie}{19}{20} \\   
     \ganttbar[bar/.append style={fill=orange}]{CookieSpotters: Write main results}{21}{22} \\  
     \ganttbar[bar/.append style={fill=orange}]{CookieSpotters: Outline paper}{23}{24} \\       
-    \ganttbar[bar/.append style={fill=orange}]{CookieSpotters: Submit outline paper to Lizzie}{24}{25} \\   
+    \ganttbar[bar/.append style={fill=orange}]{CookieSpotters: Submit paper outline to Lizzie}{24}{25} \\   
         \ganttbar[bar/.append style={fill=blue}]{EcoEvo: Present CookieSpotters project}{25}{25} \\ 
     \ganttbar[bar/.append style={fill=orange}]{CookieSpotters: Review outline and write methods and introduction}{26}{27} \\   
     \ganttbar[bar/.append style={fill=orange}]{CookieSpotters: Write discussion}{29}{31} \\ 
