edited model notes

--- a/notes/model/modelNotes.tex
+++ b/notes/model/modelNotes.tex
@@ -42,7 +42,7 @@ What kind of pooling? Partial pooling since they are all within the same family?
 
 \section{Simulate data}
 I arbitrarily decided to sum up the GDD between DOY 100 and 300 for data simulation. \\
-yhat: combine the effects that I generated from the grand mean, the , species and individual effect deviation effect from the mean, + error returns my yhat. That returns the observed outcome which is composed of multiple nested effects. 
+yhat: combine the effects that I generated from the grand mean, the year effect (other than variation of GDD), individual effect, species response to GDD and the overall error, which returns my yhat i.e. ring width in mm.
 
 \section{Set your priors}
 
