--- a/notes/model/modelNotes.tex
+++ b/notes/model/modelNotes.tex
@@ -72,11 +72,15 @@ $ \alpha_{sp[id]} \sim \text{normal}(\alpha_{sp}, \sigma_{\alpha id})$\\
 $ \alpha_{prov} \sim \text{normal}(0, \sigma_{\alpha prov})$ \\
 
 \textbf{Nested on the intercept without provenance---Option 2}\\
-$ y_i \sim \text{normal}(\mu, \sigma_y)$\\
-$ \mu =  \alpha + \alpha_{sp} + \alpha_{prov} + \alpha_{id} +  \beta*gdd$\\
-$ \alpha_{sp} \sim \text{normal}(0, \sigma_{\alpha sp})$\\
-$ \alpha_{prov} \sim \text{normal}(0, \sigma_{\alpha prov})$\\
-$ \alpha_{id} \sim \text{normal}(0, \sigma_{\alpha id})$
+\[
+\begin{aligned}
+ringwidth_i &\sim \text{Normal}(\mu, \sigma_y) \\
+\mu &= \alpha + \alpha_{\text{species}} + \alpha_{\text{site}} + \alpha_{\text{treeid}} + \beta \, * gdd \\
+\alpha_{\text{species}} &\sim \text{Normal}(0, \sigma_{\alpha \, \text{species}}) \\
+\alpha_{\text{site}} &\sim \text{Normal}(0, \sigma_{\alpha \, \text{site}}) \\
+\alpha_{\text{treeid}} &\sim \text{Normal}(0, \sigma_{\alpha \, \text{treeid}})
+\end{aligned}
+\]
 
 \textit{Notes on option 1 vs option 2}: Charles pointed out during the working group that opt 1 and 2 were actually the same thing. After chatting with Lizzie on 8-09-2025, we concluded that he was right and to simplify the code, we will use option 2.
 
